# eclipse-defi-ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
core/ai/: __init__.py
core/blockchain/: __init__.py
core/config/: __init__.py
core/data/: __init__.py
core/security/: __init__.py
core/utils/: __init__.py
drift/perps-close/: __init__.py
drift/perps-open/: __init__.py
drift/vaults-deposit/: __init__.py
drift/vaults-withdraw/: __init__.py
jupiter/dao-claim/: __init__.py
jupiter/dao-stake/: __init__.py
jupiter/dao-unstake/: __init__.py
jupiter/perps-add-collateral/: __init__.py
jupiter/perps-close/: __init__.py
jupiter/perps-open/: __init__.py
jupiter/perps-remove-collateral/: __init__.py
jupiter/perps-stop-loss/: __init__.py
jupiter/perps-take-profit/: __init__.py
jupiter/swap/: __init__.py
kamino/: __init__.py
lulo/deposit/: __init__.py
lulo/withdraw/: __init__.py
marginfi/supply/: __init__.py
marginfi/withdraw/: __init__.py
market_making/: __init__.py  client.py
market_making/strategies/: adaptive_strategy.py
market_making/utils/: order_book.py
meteora/add-liquidity/: __init__.py
meteora/launch-token/: __init__.py
meteora/remove-liquidity/: __init__.py
raydium/add-liquidity/: __init__.py
raydium/create-position/: __init__.py
raydium/save/: __init__.py
raydium/staking-claim/: __init__.py
raydium/staking-stake/: __init__.py
raydium/staking-unstake/: __init__.py
tests/integration/: test_performance_evaluation.py
tests/integration_simulation/: test_core_integration.py  test_protocol_integration.py
tests/simulation/: test_strategy_simulation.py
tests/unit/: test_ai.py  test_blockchain.py  test_config.py  test_data.py  test_security.py  test_utils.py
